--- a/Analysis/Text Analysis.Rmd
+++ b/Analysis/Text Analysis.Rmd
@@ -68,7 +68,7 @@ ggplot(data = subdat, aes(x = descriptioncount)) + geom_histogram(bins=30, fill 
  ggtitle('Description word length Distribution') + 
  xlab('Number of words used in Description') + 
  ylab('Number of Observations') + 
- theme(plot.title = element_text(hjust = 0.5)) + 
+ theme(plot.title = element_text(hjust = 0.5)) + scale_fill_brewer(palette = "Blues")
  ylim(0,25000) 
 ```
 
