--- a/Analysis/Data visualization-price+point.Rmd
+++ b/Analysis/Data visualization-price+point.Rmd
@@ -19,6 +19,7 @@ library(DT)
 dat <- fread(input = '../Data/winemag-data-130k-v2.csv',verbose = FALSE,na.strings=c(""))
 dat <- dat[,-1]
 
+getwd()
 ```
 
 ```{r functions}
