Modified Text analysis and recommedation engine

--- a/Analysis/NLP2.Rmd
+++ b/Analysis/NLP2.Rmd
@@ -21,12 +21,9 @@ library(caret)
 
 
 ```{r read data, echo=FALSE}
-dat <- fread(input = '../Data/winemag-data-130k-v2.csv',verbose = FALSE,na.strings=c(""))
-dat <- dat[,-1]
-
+dat=fread("wines.csv",na.strings=c("")) 
 description.name="description"
 points.name="points"
-
 ```
 
 
@@ -46,9 +43,6 @@ fix.contractions=function(dat){
   dat=removePunctuation(dat)
   return(dat)
 }
-
-incomplete.cases=which(!complete.cases(train.tokens.tfidf))
-
 textdat=textdat[,lapply(.SD, FUN="fix.contractions")]
 # ggplot(textdat,aes(x=textlen,fill=points))+geom_histogram(binwidth = 5,stat="count")
 
@@ -103,7 +97,6 @@ tf.idf=function(tf,idf){
 train.tokens.df=apply(train.tokens.matrix,1,term.freq)
 train.tokens.idf=apply(train.tokens.matrix,2,inverse.doc.frq)
 train.tokens.tfidf=apply(train.tokens.df,2,tf.idf,idf=train.tokens.idf)
-
 #fix incomplete cases
 incomplete.cases=which(!complete.cases(train.tokens.tfidf))
 train.tokens.tfidf[incomplete.cases,]=rep(0.0,ncol(train.tokens.tfidf))
