--- a/Analysis/Text Analysis.Rmd
+++ b/Analysis/Text Analysis.Rmd
@@ -75,18 +75,18 @@ ggplot(data = subdat, aes(x = descriptioncount)) + geom_histogram(bins=30, fill 
 ```{r}
 
 # top words 
-subdat[, freq_terms(text.var = subdat$description, stopwords = Top200Words)]
+subdat[, qdap::freq_terms(text.var = subdat$description, stopwords = Top200Words)]
 
 # Sentiment Analysis
 subdat %>%
 unnest_tokens(output = word, input = description) %>%
 inner_join(get_sentiments('bing')) %>%
 group_by(sentiment) %>%
-count() %>%
+count()%>%
 ggplot(aes(x=sentiment,y=n, fill=sentiment)) + geom_col() + 
  theme_classic() + guides(fill=F) + 
  ggtitle('Sentiment Distribution') + ylab('Number of Oversation') + 
- ylim(0,400000) + theme(plot.title = element_text(hjust = 0.5)) 
+ ylim(0,400000) + theme(plot.title = element_text(hjust = 0.5)) + geom_text(aes(label = n))
 
 
 # Sentiment Analysis ny country 
@@ -101,7 +101,10 @@ ggplot(aes(x= country, y=proportion,fill=sentiment)) + geom_col() +
  ggtitle('Sentiment Distribution') + ylab('Number of Oversation') + 
  theme(plot.title = element_text(hjust = 0.5)) 
 
+
+
 ```
+
 ```{r}
 # Sentiment Analysis
 subdat %>%
@@ -109,11 +112,10 @@ unnest_tokens(output = word, input = description) %>%
 inner_join(get_sentiments('nrc')) %>%
 group_by(sentiment) %>%
 count() %>%
-ggplot(aes(x=sentiment,y=n, fill=sentiment)) + geom_col() + 
+ggplot(aes(x=reorder(sentiment,-n),y=n, fill=sentiment)) + geom_col() + 
  theme_classic() + guides(fill=F) + 
- ggtitle('Sentiment Distribution') + ylab('Number of Oversation') + 
- #ylim(0,400000) + 
- theme(plot.title = element_text(hjust = 0.5)) 
+ ggtitle('Sentiment Distribution') + ylab('Number of Obversation') + 
+ theme(plot.title = element_text(hjust = 0.5)) + xlab('Sentiment: Emotion')
 
 
 # Sentiment Analysis ny country 
@@ -167,18 +169,3 @@ wordcloud(words = wordcloudData$word,wordcloudData$freq,scale=c(2,0.5),
           max.words = 100, colors = brewer.pal(10,'Spectral'))
 
 ```
-
-
-
-```{r}
-?brewer.pal()
-```
-
-```{r}
-
-```
-
-```{r}
-
-```
-
